change to distance
make distance respond to user input

--- a/travel_roi.html
+++ b/travel_roi.html
@@ -200,7 +200,7 @@ corporate office. All branches are within 45 minutes of the corporate office in 
 	</div>
 	<div class="boxlet">
 	  <p>Distance<br/>Travelled</p>
-	  <h4>138 mi.</h4>
+		<h4><span id="rt_distance">def</span> mi.</h4>
 	</div>
 	<div class="boxlet"><p>*Cost<br/>incurred</p>
 	  <h4><sup>$</sup><span id="driveCost"></span><sup></sup></h4>
@@ -211,7 +211,7 @@ corporate office. All branches are within 45 minutes of the corporate office in 
 	</div>
 	<div class="boxlet annual">
 	  <p>Distance<br/>Travelled</p>
-	  <h4>1656 mi.</h4>
+		<h4><span class="miTotal">abc</span> mi.</h4>
 	</div>
 	<div class="boxlet annual"><p>*Cost<br/>incurred</p>
 	  <h4><sup>$</sup><span id='annualCost'></span><sup></sup></h4>
