--- a/travel_roi.html
+++ b/travel_roi.html
@@ -9,6 +9,7 @@
 $(function() {
 // 12/05/16 production design    2 hours
 // 12/06/16 production design    3 hours
+
 	
 	var rsms=[['Shayne Boelter','shayne.boelter@brother.com'],['',''],['',''],['',''],['','']];
 	var industry="regional bank";
@@ -40,7 +41,7 @@ $(function() {
 			color:black!important;
 		}
 		
-		.boxlet{width:150px;
+		.boxlet{width:148px;
 		background-color:darkgray;
 		height:100px;
 		float:left;
@@ -154,16 +155,22 @@ $(function() {
 			clear:both;
 			//border:thin red solid;
 		}
-		.totalHead{float:left;
+		.totalHead{
+			display:block;
 			text-align: left;
 			height:24px;
 			margin-top:10px;
-			width:100%;
+			//width:100%;
+			padding-left:10px;
 			clear:both;}
 		
-		.totals{//display:flex;
+		.totals{
   			justify-content:space-between;
-  			//border:solid;}
+			border:thin gray solid;
+			padding-bottom:10px;
+			background-color: whitesmoke;
+  		}
+		
 	</style>
 </head>
 
@@ -195,17 +202,18 @@ corporate office. All branches are within 45 minutes of the corporate office in 
 	
 
 	</tbody></table></div>
-	<div class="totals"><span class="totalHead">TOTALS FOR THIS MEETING</span>
-	  <div class="boxlet"><p>Time wasted in transit</p>
-		  <h4> <span class="totTim"></span> min.</h4>
-	</div>
-	<div class="boxlet">
-	  <p>Distance<br/>Travelled</p>
-		<h4><span id="rt_distance">def</span> mi.</h4>
-	</div>
-	<div class="boxlet"><p>*Cost<br/>incurred</p>
-	  <h4><sup>$</sup><span id="driveCost"></span><sup></sup></h4>
-	</div></div><div class="clearBoth"></div>
+	<div class="totals">
+  		<span class="totalHead">TOTALS FOR THIS MEETING</span>
+	  		<div class="boxlet"><p>Time wasted in transit</p>
+			<h4> <span class="totTim"></span> min.</h4>
+			</div>
+			<div class="boxlet">
+	  		<p>Distance<br/>Travelled</p>
+				<h4><span id="rt_distance">def</span> mi.</h4>
+			</div>
+			<div class="boxlet"><p>*Cost<br/>incurred</p>
+	  		<h4><sup>$</sup><span id="driveCost"></span><sup></sup></h4>
+			</div><div class="clearBoth"></div></div>
 		<div class="annual"><div class="totalHead">ANNUAL TOTALS <span>(12 meetings)</span></div>
 	<div class="boxlet annual"><p>Time wasted in transit</p>
 		<h4><span class="totTim2"></span> hrs.</h4>
