--- a/travel_roi.html
+++ b/travel_roi.html
@@ -267,10 +267,11 @@ label{
 
 <body>
 <div class="container">
-<div id="controls"><div id="inputs">
+<div id="controls"><form>
+     <div id="inputs">
       <div id="dateSpot">
             <label>Date</label><!--changed from date because not completely supported-->
-            <input id="inputDate" type="text" value="date"></input>
+            <input id="inputDate" type="date" value="date">
         </div>
         <div id="hostN">
         <label>Host name</label> <input id="hostName" class="newAtt" type="text" value="Host name"> </input>
@@ -291,7 +292,7 @@ label{
 	</select>
 </div>
        </div>
-       <span id="run">RUN</span>
+       <span id="run">RUN</span></form>
        <div class="clearBoth"></div> </div>
 	<div class="titleBox">
 	<div class="logo"><img src="OmniJoin_meet_smarter_R-01.png" width="60%" alt="oj logo"/></div>
