--- a/ojsave.html
+++ b/ojsave.html
@@ -205,7 +205,7 @@ function salesDetail(){
 		}
 }
 
-//---iterate the attendee number--------------
+//---interate the attendee number--------------
 
 function getAttNum(){
 	attNum = attNum + 1;
