most recent working version
does not include input checks

--- a/travel_roi.html
+++ b/travel_roi.html
@@ -23,7 +23,7 @@
 //12/20/16 instructions, ready to share for input
 //total hrs: 17.25
 //12/21/16 production design   1hr
-//12/22/16 production corrections 
+//12/22/16 production corrections 3 hrs.
 	
 	
 	
