--- a/travel_roi_busted 122216.html
+++ b/travel_roi_busted 122216.html
@@ -534,7 +534,7 @@ tr:nth-child(even) {background-color: #f2f2f2}
        <div id="inputs">
         <div id="clientN">
           <label class="sig">Company Name</label>
-          <input id="cliName" class="newAtt" type="text" value="Default"/>
+          <input id="cliName" class="newAtt" type="text" value="Big Midwest Bank"/>
        </div> 
        
        <div id="hostLogo">
@@ -542,16 +542,16 @@ tr:nth-child(even) {background-color: #f2f2f2}
        </div> 
        
         <div id="hostN">
-        <label class="sig">Host name</label> <input id="hostName" class="newAtt" type="text" value="Default"/>
+        <label class="sig">Host name</label> <input id="hostName" class="newAtt" type="text" value="Charlie"/>
        </div> 
        <div>
-      <label class="sig">Host location</label><input id="host" class="newAtt" type="text" value ="Default" />
+      <label class="sig">Host location</label><input id="host" class="newAtt" type="text" value ="Des Moines Iowa" />
 	</div>
       <div style="margin-bottom:10px;">
-      <label class="sig">Host Industry</label><input id="hostIndus" class="newAtt" type="text" value ="Default" />
+      <label class="sig">Host Industry</label><input id="hostIndus" class="newAtt" type="text" value ="Banking" />
 	</div>
        <div id="attendeeDiv" style="margin-bottom:10px;">
-        <label class="sig">Attendee 1</label><input id="attendee1" class="newAtt" type="text" value ="Default" /></div>
+        <label class="sig">Attendee 1</label><input id="attendee1" class="newAtt" type="text" value ="08833" /></div>
         <div id="descr">
         <textarea cols="42" rows="5" name="descriptionText" id="descriptionText">
  is [insert industry type] with [insert number of offices] in [insert state or locale]. The bank has monthly branch manager meetings at the corporate office. All branches are within 45 minutes of the corporate office in Bridgewater, NJ
