--- a/travel_roi.html
+++ b/travel_roi.html
@@ -775,7 +775,7 @@ tr:nth-child(even) {background-color: #f2f2f2}
 				  var hourPercent= (totMeetRTtime*parseInt(meetingMultiplier))/60;
 				  //alert(math.floor(hourPercent));
 				 
-				  alert(hourPercent);//ok 2.794444444443
+				  //alert(hourPercent);//ok 2.794444444443
 				 // alert(Math.floor(hourPercent));//2 this is hours correctly
 				  var justHours=Math.floor(hourPercent);
 				  //alert(justHours);
