--- a/travel_roi.html
+++ b/travel_roi.html
@@ -523,9 +523,9 @@ select {
 	width: 120px;
 	text-align: center;
 	margin-top: 10px;
-	background-color: darkgrey;
-	border-radius: 5px;
-	color: white;
+	//background-color: darkgrey;
+	//border-radius: 5px;
+	color: darkgray;
 }
 table, td {
 	width: 100%;
@@ -588,30 +588,29 @@ td {
     <div id="midControl">
       <h5 style="text-align: center; display:inline-block; width:100%; height:25px;background-color:darkgray;color:white;padding-top:7px; margin-top:-10px; margin-bottom:-10px;">INSTRUCTIONS</h5>
       <p><span class="sig" id="sig1">Client Name</span><br>
-        Please enter the lead's company <strong>name</strong>. <br>
+        Please enter the <strong>company name</strong> of your prospect. <br>
         <span class="sig">Host Logo URL</span><br>
-        On request I will send you the url to add in the <strong>host logo field<span style="font-size: 12px">. </span></strong>Enter it into the Host logo url field. It will replace the default roi calculator logo. as an example, replace the existing address in the url box with the link below:<br>
-	    <strong><span style="font-size:15px"><a href="http://blog.brothercloud.com/podcast/FirstBank.JPG">http://blog.brothercloud.com/podcast/FirstBank.JPG</a></span></strong><br>
-		  in the field and click the <span style="color:orangered; font-weight: 700;">UPDATE</span> button on the upper right.
-        You can have a customized output with your prospect's logo on it like this. <br>
-        <span class="sig">Host Name</span><br>
-        The <strong>host name</strong> is your contact at the target company. <br>
+		  Please send me the company logo and I will generate a unique <strong>logo url</strong> for you to input into this field.<br>
+        <span class="sig">Prospect Name</span><br>
+        This is your main point of contact within the company.  <br>
         <span class="sig">Host Location</span><br>
-        The <strong>host location</strong> is their home office, or the destination for the meeting attendees. You can enter a street address, city/town and state, or zip code. <br>
-        <span class="sig">First Attendee</span> <br>
-        The <strong>first meeting attendee</strong> address goes in the attendee 1 field. You can enter zip code, street addresses or town/city and state abbeviation; the tool is pretty forgiving but if there is no result, an entry error is the likely problem. <br>
+		  The <strong>host location</strong> is their home office, or the destination for meeting attendees. You can enter a street address, city/town and state, or zip code.  <br>
+        <span class="sig">Attendee 1</span> <br>
+		  Please enter your <strong>first meeting attendee</strong> into this field. You can enter a street address, city/town and state, or zip code.  <br>
         <span class="sig">Add Attendee</span><br>
-		  Use the <span style="color:darkgoldenrod; font-weight: 700;">add attendee</span> button to add attendees one at a time. Click the &quot;ADD ATTENDEE&quot; button on the right below the &quot;update&quot; button and put the attendee origin address, city/town and state or zipcode in the new attended field that appears on the left. <span class="warning">!! All attendees must have a legit address (city/state, zip code or street address). If google can't parse the entered data the ROI calculation will fail.</span><br>
-        <span class="sig">Description</span> <br>
-        The description appears above the map. Just write a simple desciption, using the provided example if you like.<br>
-        <span class="sig">Meetings/yr</span><br>
-        &quot;Meetings/yr&quot; is a simple multiplier for the number of meetings the lead might have per year. Choose 1 to 12. The default is 1 meeting; if you change this number to something other than 1, the &quot;annual savings&quot; data will appear in the display (this just multiplies aggregate meeting data- distance, time and cost - by the number of meetings you are indicating that the customer may be doing). <br>
+        
+		  To add an attendee, use the <strong>add attendee</strong> button in the top right. You can enter a street address, city/town and state, or zip code. <br>
+       
+        <span class="sig">Description</span> <br>Please customize the default text as appropriate. 
+        <br>
+        <span class="sig">Meetings/yr</span> <br>
+       Please enter how many meetings your prospect has at the host location each year. The default is 1 but you can choose up to 12.  <br>
         <span class="sig">RSM</span><br>
-        Choose your name from the <strong>RSM dropdown</strong>. This populates your phone and email into the display. <br>
+        Please select your name. <br>
         <span class="sig">Update</span><br>
-        Click the <span style="color:orangered; font-weight: 700;">UPDATE</span> button to update the page with your own data. You can do this as many times as you like but there are some restrictions from google, so you may see a warning message about data use. No worries, you didn't break anything. <strong><br>
+        Click the <strong>UPDATE</strong> button to update the page with your own data. There are some restrictions from google, so you may see a warning message about data use. <strong><br>
         <span class="sig">revise</span><br>
-        </strong>Click the <strong>OmniJoin logo</strong> in the resulting page below to show the entry fields again. You can modify your unput fields, then click the &quot;update&quot; button again to see the results.    </p>
+        </strong>Click the <strong>OmniJoin logo</strong> in the resulting page below to show the entry fields again. You can modify your input fields, then click the <strong>UPDATE</strong> button again to see the results.    </p>
     </div>
     <div id="leftcontrol">
       <div id="inputs">
